# lolo_common

./: CMakeLists.txt  README.md  lolo_common.rosinstall  lolo_msgs.rosinstall  package.xml  release_packages.yaml
.github/workflows/: main.yml  release.yaml
captain_interface/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
captain_interface/include/captain_interface/: CircleBuffer.h  scientistmsg.h
captain_interface/include/captain_interface/CaptainInterFace/: CaptainInterFace.h
captain_interface/include/captain_interface/RosInterFace/: RosInterFace.h
captain_interface/include/captain_interface/TcpInterFace/: TcpInterFace.h
captain_interface/include/captain_interface/UDPInterface/: UDPInterface.h
captain_interface/launch/: hemma.launch  interface.launch
captain_interface/scripts/: actionclient.py  captain_services.py  lolo_translator.py  menu_input.py  scientist_logger.py  usbl_output.py  waypoint_actionserver.py
captain_interface/src/: main.cpp
captain_interface/src/CaptainInterFace/: CaptainInterFace.cpp
captain_interface/src/RosInterFace/: RosInterFace.cpp  RosInterFace_captain_callbacks.cpp  RosInterFace_ros_callbacks.cpp
captain_interface/src/TcpInterFace/: TcpInterFace.cpp
captain_interface/src/UDPInterface/: UDPInterface.cpp
include/captain_interface/: CircleBuffer.h  UTM.h  scientistmsg.h
include/captain_interface/CaptainInterFace/: CaptainInterFace.h
include/captain_interface/RosInterFace/: RosInterFace.h
launch/: bridge.launch  interface.launch  test1.launch  upload_lolo_auv.launch
libraries/: Arduino.h
libraries/CaptainInterFace/: CaptainInterFace.cpp  CaptainInterFace.h
libraries/CircleBuffer/: CircleBuffer.h
libraries/TcpInterface/: TcpInterface.cpp  TcpInterface.h
lolo_auv_sim/: CMakeLists.txt  package.xml
lolo_auv_sim/mesh/: decals.dae
lolo_auv_sim/robots/: lolo_auv_default.urdf.xacro
lolo_auv_sim/urdf/: lolo_auv_base.urdf.xacro
lolo_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
lolo_description/launch/: lolo_description.launch
lolo_description/mesh/: lolo_elevator.dae  lolo_elevon.dae  lolo_port_propeller.dae  lolo_strb_propeller.dae
lolo_description/scripts/: joint_state_converter.py
lolo_description/urdf/: actuators.xacro  lolo_auv.urdf.xacro
lolo_drivers/: CHANGELOG.rst  CMakeLists.txt  package.xml
lolo_drivers/launch/: lolo_core.launch
lolo_drivers/scripts/: dvl_to_altitude.py  ins_to_dr.py  lolo_bringup.sh  odom_to_angles.py  odom_to_angles_sim.py  old_pose_converter.py
lolo_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
lolo_msgs/msg/: CaptainService.msg  CaptainStatus.msg  PD0_Bottomtrack.msg  PD0_Fixedleader.msg  PD0_Variableleader.msg  VbsMode.msg  VbsTank.msg
msg/: CaptainStatus.msg
scripts/: example_control.py  lolo_translator.py  menu_input.py  menu_output.py  neptus_translation_test.py  transform_broadcaster.py  waypoint_actionserver.py  waypoint_actionserver_UTM.py
src/: main.cpp
src/CaptainInterFace/: CaptainInterFace.cpp
src/RosInterFace/: RosInterFace.cpp  RosInterFace_captain_callbacks.cpp  RosInterFace_ros_callbacks.cpp
src/TcpInterFace/: TcpInterFace.cpp
urdf/: lolo_auv_base.urdf.xacro
